--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper {
+  padding-top: 40px !important;
+  padding-bottom: 40px !important;
+}
+
+.swiper-pagination-bullet{
+  background-color: white !important;
+}
+
+.swiper-button-next{
+  color: #FFF !important; 
+}
+
+.swiper-button-prev{
+  color: #FFF !important; 
+}
